# SAGE

./: .gitattributes  .gitignore  AAAI_REPRODUCIBILITY.md  README.md  index.html  pyproject.toml
SkillOpt/: pyproject.toml
SkillOpt/configs/_base_/: default.yaml
SkillOpt/sage/: __init__.py  evidence.py  gate.py  metrics.py
SkillOpt/skillopt/: config.py
SkillOpt/skillopt/engine/: trainer.py
SkillOpt/skillopt/evaluation/: gate.py
benchmarks/alfworld/: launch.py  spec.json
benchmarks/common/: run_benchmark.py  schema.py
benchmarks/livemath/: launch.py  spec.json
benchmarks/officeqa/: launch.py  spec.json
benchmarks/searchqa/: launch.py  spec.json
benchmarks/spreadsheetbench/: launch.py  spec.json
configs/: model.example.yaml  sage_gate.example.yaml  skillopt_strict_gate.example.yaml
docs/: repository_review.md  reproduction.md  reviewer_guide.md
patches/skillopt/: README.md  sage_gate.patch
sage/: denoise.py  skillopt_bridge.py
scripts/: export_patch.py  make_aaai_supplement.py  run_all.py  run_benchmark.py
tests/: test_anonymize_scan.py  test_benchmark_schema.py  test_benchmark_specs.py  test_denoise.py  test_docs.py  test_evidence.py  test_export_patch.py  test_gate_baseline_recovery.py  test_run_benchmark.py  test_run_scripts.py  test_skillopt_bridge.py  test_vendor_skillopt_sage.py
tools/: anonymize_scan.py
